--- a/Tsybenko.html
+++ b/Tsybenko.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<!-- saved from url=(0031)http://bogdankulynych.me/resume -->
+
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
         
     <title>Dmytro Tsybenko</title>
-    <link href="./Dmytro Tsybenko_files/css" rel="stylesheet" type="text/css">
-    <link href="./Dmytro Tsybenko_files/css(1)" rel="stylesheet" type="text/css">
+    <link href="./Tsybenko_files/css" rel="stylesheet" type="text/css">
+    <link href="./Tsybenko_files/css(1)" rel="stylesheet" type="text/css">
 
-    <link rel="stylesheet" href="./Dmytro Tsybenko_files/resume.css" type="text/css">
+    <link rel="stylesheet" href="./Tsybenko_files/resume.css" type="text/css">
   </head>
   <body>
     
@@ -255,7 +255,7 @@
 
 
     <!-- Piwik -->
-<script type="text/javascript" async="" defer="" src="./Dmytro Tsybenko_files/piwik.js.Без названия"></script><script type="text/javascript">
+<script type="text/javascript" async="" defer="" src="./Tsybenko_files/piwik.js"></script><script type="text/javascript">
   var _paq = _paq || [];
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
