--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
         
     <title>Dmytro Tsybenko</title>
-    <link href="./Tsybenko_files/css" rel="stylesheet" type="text/css">
+    <link href="./Tsybenko_files/io.css" rel="stylesheet" type="text/css">
     <link href="./Tsybenko_files/css(1)" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" href="./Tsybenko_files/resume.css" type="text/css">
