--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
     <title>Dmytro Tsybenko</title>
     <link href="./Tsybenko_files/io.css" rel="stylesheet" type="text/css">
-    <link href="./Tsybenko_files/css(1)" rel="stylesheet" type="text/css">
+    <link href="./Tsybenko_files/io.css(1)" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" href="./Tsybenko_files/resume.css" type="text/css">
   </head>
