--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           Location: <strong>Kyiv, Ukraine</strong><br>
           Email: <strong><span class="ename">tsybenkodima</span>gmail.com</strong><br>
           
-          Github: <a blank=True href="http://github.com/dmytrotsybenko">dmytrotsybenko</a>
+          Github: <a target=_blank href="http://github.com/dmytrotsybenko">dmytrotsybenko</a>
           
         </p>
       </td>
