--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </td>
       <td>
         <h1>Dmytro Tsybenko</h1>
-        <h2>Python Web Developer</h2>
+        <h2>Junior Web Developer</h2>
       </td>
     </tr>
   </thead>
