--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>
           Tel. <strong>(073) 158-08-17</strong><br>
           Location: <strong>Kyiv, Ukraine</strong><br>
-          Email: <strong><span class="ename">tsybenkodima@gmail.com</span></strong><br>
+          Email: <strong><span class="ename">tsybenkodimagmail.com</span></strong><br>
           
           Github: <a target=_blank href="http://github.com/dmytrotsybenko">dmytrotsybenko</a>
           
